Start adding filesystem support, based on LxRunOffline's support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@
 cmake_minimum_required(VERSION 3.4)
 project(wslman)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
@@ -27,6 +27,8 @@ set(CMAKE_AUTORCC ON)
 
 add_executable(wslman WIN32 wslman.cpp)
 target_sources(wslman PRIVATE
+    wslfs.h
+    wslfs.cpp
     wslinstall.h
     wslinstall.cpp
     wslregistry.h
@@ -43,7 +45,13 @@ target_sources(wslman PRIVATE
     wslman.rc
     wslman.manifest
 )
-target_link_libraries(wslman PRIVATE Qt5::Core Qt5::Widgets Qt5::WinExtras)
+
+target_link_libraries(wslman PRIVATE
+    Qt5::Core
+    Qt5::Widgets
+    Qt5::WinExtras
+    Ntdll.lib
+)
 
 # Find windeployqt, which should be in the same path as Qt5::qmake
 get_target_property(_qmake_executable Qt5::qmake IMPORTED_LOCATION)
